--- a/LG.AbpDtoGenerator.Common/packages.config
+++ b/LG.AbpDtoGenerator.Common/packages.config
@@ -1,5 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Composition" version="1.0.31" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Composition" version="16.4.11" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Composition.NetFxAttributes" version="16.4.11" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Threading" version="16.7.56" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="16.7.56" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.5.31" targetFramework="net472" />
+  <package id="Microsoft.VisualStudio.Workspace" version="16.3.43" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.6.0" targetFramework="net472" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Composition" version="4.5.0" targetFramework="net472" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="1.3.0" targetFramework="net472" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.6.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
