--- a/LGVSIX/LGVSIX.csproj
+++ b/LGVSIX/LGVSIX.csproj
@@ -82,6 +82,12 @@
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common">
       <Version>3.7.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.ComponentModelHost">
+      <Version>16.6.255</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.LanguageServices">
+      <Version>3.7.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.206" ExcludeAssets="runtime" />
     <PackageReference Include="Microsoft.VisualStudio.Workspace">
       <Version>16.3.43</Version>
